# bamboo-shoot3

./: .cirrus.yml  .gitattributes  .travis.yml  CMakeLists.txt  README.md  lcov-report.sh
bench/: CMakeLists.txt  bench-crc32.cc  bench-hitdata.cc  bench-writefile.cc  extern-serialize.cc  extern-serialize.hh  hitdata.bsi  hitdata.hh
ci-tasks/: README.md  run.sh
ci-tasks/bsic/: Dockerfile
ci-tasks/buster-gcc8/: Dockerfile
ci-tasks/cent6-devts3/: Dockerfile
ci-tasks/cent6-devts4/: Dockerfile
ci-tasks/cent7-devts3/: Dockerfile
ci-tasks/cent7-devts4/: Dockerfile
ci-tasks/clang-jessie/: Dockerfile
ci-tasks/gcc48/: Dockerfile
ci-tasks/gcc49/: Dockerfile
ci-tasks/gcc5/: Dockerfile
ci-tasks/gcc6/: Dockerfile
ci-tasks/gcc7/: Dockerfile
ci-tasks/gcc8/: Dockerfile
doc/: bsi.md  file.md  pbsf.md  pbss.md  serialization.md  utils.md
example/: CMakeLists.txt  defs.hh  dump.cc  gen-src.cc  multi-input.cc  single-input.cc
include/bs3/: pbs.hh
include/bs3/pbsf/: crc-32.hh  data-block.hh  defs.hh  file-header.hh  indexed-file.hh  pbsf.hh  range-api.hh  realm.hh
include/bs3/pbss/: char-range-reader.hh  char-range-writer.hh  pbss.hh  uninitialized-byte.hh  var-uint.hh
include/bs3/pbss/impl/: pbss-enum.hh  pbss-pair-fwd.hh  pbss-pair.hh  pbss-parse-container-fwd.hh  pbss-parse-container.hh  pbss-primitives.hh  pbss-serialize-iterable-fwd.hh  pbss-serialize-iterable.hh  pbss-size.hh  pbss-std-tuple-fwd.hh  pbss-std-tuple.hh  pbss-struct-fwd.hh  pbss-struct.hh  pbss-tuple-fwd.hh  pbss-tuple.hh  pbss-uninitialized-byte.hh  pbss-var-uint.hh
include/bs3/utils/: bp-14.hh  functional.hh  gcc48-warning.hh  iter-util.hh  lazy-value.hh  misc.hh  optional.hh  peek-for-eof.hh  range-util.hh  range.hh  tuple-util.hh  type-traits.hh
src/: CMakeLists.txt
src/pbsf/: CMakeLists.txt  crc-32.cc  data-block.cc  gipfeli-wrap.cc  gipfeli-wrap.hh  lz4-wrap.cc  lz4-wrap.hh  lzo-wrap.cc  lzo-wrap.hh  zstd-wrap.cc  zstd-wrap.hh
test/: CMakeLists.txt
test/pbsf/: CMakeLists.txt  test-crc32.cc  test-encode-block-default.cc  test-encode-block-gipfeli.cc  test-encode-block-identity.cc  test-encode-block-lz4.cc  test-encode-block-lz4hc.cc  test-encode-block-lzo.cc  test-encode-block-unknown.cc  test-encode-block-zstd.cc  test-encode-block.cc  test-gipfeli-wrap.cc  test-indexed.cc  test-lookup.cc  test-lz4-wrap.cc  test-lzo-wrap.cc  test-range-api.cc  test-read-iterator.cc  test-valid-file.cc  test-write-block.cc  test-write-header.cc  test-write-iterator.cc  test-zstd-wrap.cc
test/pbss/: CMakeLists.txt  checker.hh  test-contiguous.cc  test-parse-container.cc  test-parse-iterator.cc  test-parse-primitive.cc  test-serialize-iterable.cc  test-serialize-parse-enum.cc  test-serialize-parse-pair.cc  test-serialize-parse-stdtuple.cc  test-serialize-parse-struct.cc  test-serialize-parse-var-uint.cc  test-serialize-primitive.cc  test-size-enum.cc  test-size-helpers.cc  test-size-iterable.cc  test-size-pair.cc  test-size-primitive.cc  test-size-stdtuple.cc  test-size-struct.cc  test-size-tuple.cc  test-size-var-uint.cc  test-tuple.cc
test/utils/: CMakeLists.txt  test-functional.cc  test-iter-util.cc  test-misc.cc  test-optional.cc  test-peek-for-eof.cc  test-range-util.cc  test-range.cc  test-tuple-util.cc  test-type-traits.cc
util/: CMakeLists.txt
util/bsic/: Main.hs  Setup.hs  bsic.cabal  random-helpers.cc  stack.yaml  test-helpers.cc
util/bsic/PBS/: BSIGenCC.hs  BSIParse.hs  Utils.hs
util/pbsic/: pbsic.pl
