--
--  Copyright 2016 Carl Lei
--
--  This file is part of Bamboo Shoot 3.
--
--  Bamboo Shoot 3 is free software: you can redistribute it and/or modify
--  it under the terms of the GNU General Public License as published by
--  the Free Software Foundation, either version 3 of the License, or
--  (at your option) any later version.
--
--  Bamboo Shoot 3 is distributed in the hope that it will be useful,
--  but WITHOUT ANY WARRANTY; without even the implied warranty of
--  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
--  GNU General Public License for more details.
--
--  You should have received a copy of the GNU General Public License
--  along with Bamboo Shoot 3.  If not, see <http://www.gnu.org/licenses/>.
--
--  Carl Lei <xecycle@gmail.com>

-- The name of the package.
name:                bsic

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- URL for the project homepage or repository.
homepage:            https://github.com/XeCycle/bamboo-shoot3

-- The license under which the package is released.
license:             GPL-3

-- The file containing the license text.
-- license-file:        LICENSE

-- The package author(s).
author:              Carl Lei

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          xecycle@gmail.com

-- A copyright notice.
-- copyright:

category:            Development

build-type:          Simple

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable bsic
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:       PBS.BSIParse PBS.BSIGenCC PBS.Utils

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.9, parsec >=3.1.11,
                       containers >=0.5.7 && <0.5.8, file-embed ==0.0.10.*,
                       bytestring ==0.10.8.*

  -- Base language which the package is written in.
  default-language:    Haskell2010

  -- enable warnings
  ghc-options: -W -fno-warn-incomplete-patterns
